--- a/index.html
+++ b/index.html
@@ -12,10 +12,6 @@
 <link href="css/main.css" rel="stylesheet">
 <link href="css/animate.css" rel="stylesheet">
 <link href="css/responsive.css" rel="stylesheet">
-<!--[if lt IE 9]>
-	    <script src="js/html5shiv.js"></script>
-	    <script src="js/respond.min.js"></script>
-    <![endif]-->
 <link rel="shortcut icon" href="images/ico/favicon.ico">
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ico/apple-touch-icon-144-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
@@ -28,10 +24,10 @@
 		<div class="container">
 			<div class="header-top">
 					<div class="pull-right social-icons">
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-google-plus"></i></a>
-					<a href="#"><i class="fa fa-youtube"></i></a>
+					<a href="https://www.twitter.com/GDGAndroidBo" target="_blank"><i class="fa fa-twitter"></i></a>
+					<a href="https://www.facebook.com/GDGAndroidBo" target="_blank"><i class="fa fa-facebook"></i></a>
+					<a href="https://google.com/+AndroidboliviaOrg" target="_blank"><i class="fa fa-google-plus"></i></a>
+					<a href="https://www.youtube.com/channel/UCzhAkMZmIuIwl5c4oTQFCkw/" target="_blank"><i class="fa fa-youtube"></i></a>
 					</div>
 			</div>
 			<div class="row">
@@ -78,8 +74,8 @@
 		<div class="item">
 		<img class="img-responsive" src="images/slider/bg1.jpg" alt="slider">
 			<div class="carousel-caption">
-			<h2>DONDE?</h2>
-			<h4>Universidad Privada de Bolivia! (UPB) 21,22 y 23 de Octubre!</h4>
+			<h2>¿DONDE?</h2>
+			<h4>Universidad Privada de Bolivia (UPB) 21,22 y 23 de Octubre</h4>
 			<a href="https://docs.google.com/forms/d/e/1FAIpQLSegEtOC3i1ytZJttGbCncG85k4WJeJlOoeFoz5yYOAb6bha1g/viewform">REGISTRATE <i class="fa fa-angle-right"></i></a>
 			</div>
 		</div>
@@ -88,8 +84,8 @@
 <div class="item">
 <img class="img-responsive" src="images/slider/bg3.jpg" alt="slider">
 <div class="carousel-caption">
-<h2>TALLERES!</h2>
-<h4>Participa de los talleres, en los que aprenderás sobre android y las principales novedades que trae este sistema.</h4>
+<h2>Android Labs</h2>
+<h4>Participa de los talleres, en los que aprenderás sobre android y las principales novedades que trae este sistema operativo.</h4>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSegEtOC3i1ytZJttGbCncG85k4WJeJlOoeFoz5yYOAb6bha1g/viewform">REGISTRATE <i class="fa fa-angle-right"></i></a>
 </div>
 </div>
@@ -207,7 +203,7 @@
 <div class="about-content">
 <h2>Qué es Android Camp?</h2>
 <p>El Android Camp es el evento con más grande despliegue en nuestro país enfocado en el sistema operativo Android. Uno de los objetivos principales es reunir a la mayor cantidad de desarrolladores, diseñadores, profesionales, estudiantes y toda persona que esté interesada en el uso, desarrollo, comercialización e innovación con este sistema operativo líder a nivel mundial en un solo lugar que en esta ocasión es la ciudad de La Paz, en el cual se compartirá experiencias, conocimiento, contactos con personas tanto de toda Bolivia como de latinoamerica.</p>
-<a href="#" class="btn btn-primary"><i class="fa fa-calendar"></i>   21,22,23 Octubre <br> <i class="fa fa-map-marker"></i>   Universidad UPB </a>
+<a href="#" class="btn btn-primary"><i class="fa fa-calendar"></i>   21,22,23 Octubre <br> <i class="fa fa-map-marker"></i>   Universidad Privada Boliviana </a>
 </div>
 </section> 
 <!-- <section id="twitter">
@@ -239,12 +235,13 @@
 </div>
 </div>
 </div>
-</section>  -->
+</section>  
 <section id="sponsor">
-	<img src="images/precios.jpg" width="100%">
+<img src="images/precios.jpg" width="100%">
 </section>
+-->
 <section id="sponsor">
-		<iframe width="100%" height="315" src="https://www.youtube.com/embed/gFOZ9eBuPww" frameborder="0" allowfullscreen></iframe>
+		<iframe width="100%" height="315" src="https://www.youtube.com/embed/DEOamwCwO1I" frameborder="0" allowfullscreen></iframe>
 
 	<!-- <div id="sponsor-carousel" class="carousel slide" data-interval="false">
 <div class="container">
@@ -348,7 +345,7 @@
 <footer id="footer">
 <div class="container">
 <div class="text-center">
-<p> Copyright &copy;2016<a target="_blank" href="http://shapebootstrap.net/"> AndroidCamp </a>All Rights Reserved. <br> Designed by <a target="_blank" href="https://www.facebook.com/groveroctavio.callisayaapaza">Grow Callsaya</a></p>
+<p> Copyright &copy;2016<a target="_blank" href="http://www.androidbolivia.com/"> Android Camp </a>All Rights Reserved. <br> Designed by <a target="_blank" href="https://www.facebook.com/groveroctavio.callisayaapaza">Grow Callsaya</a></p>
 </div>
 </div>
 </footer>
