--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>Android Camp 2016 - GDG Android Bolivia</title>
+<title>Anadroid Camp 2016 - GDG Android Bolivia</title>
 
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/font-awesome.css" rel="stylesheet">
@@ -284,10 +284,12 @@
 <section id="contact">
 
 <div id="map">
-	<div id="gmap-wrap">
+<!-- 	<div id="gmap-wrap">
 		<div id="gmap">
 		</div>
-	</div>
+	</div> -->
+
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2801.0500971498163!2d-68.12801885718899!3d-16.575616594712027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x915f27439430fccb%3A0xb94cfae1e2f36204!2sUniversidad+Privada+Boliviana!5e0!3m2!1ses-419!2sbo!4v1475174836162" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div> 
 	
 	 <!-- 
