--- a/index.html
+++ b/index.html
@@ -242,44 +242,37 @@
 -->
 <section id="sponsor">
 		<iframe width="100%" height="315" src="https://www.youtube.com/embed/DEOamwCwO1I" frameborder="0" allowfullscreen></iframe>
-
-	<!-- <div id="sponsor-carousel" class="carousel slide" data-interval="false">
-<div class="container">
-<div class="row">
-<div class="col-sm-10">
-<h2>AUSPICIADORES</h2>
-<a class="sponsor-control-left" href="#sponsor-carousel" data-slide="prev"><i class="fa fa-angle-left"></i></a>
-<a class="sponsor-control-right" href="#sponsor-carousel" data-slide="next"><i class="fa fa-angle-right"></i></a>
-<div class="carousel-inner">
-<div class="item active">
-<ul>
-<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor1.png" alt=""></a></li>
-<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor2.png" alt=""></a></li>
-<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor3.png" alt=""></a></li>
-<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor4.png" alt=""></a></li>
-<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor5.png" alt=""></a></li>
-<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor6.png" alt=""></a></li>
-</ul>
-</div>
-<div class="item">
-<ul>
-<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor6.png" alt=""></a></li>
-<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor5.png" alt=""></a></li>
-<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor4.png" alt=""></a></li>
-<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor3.png" alt=""></a></li>
-<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor2.png" alt=""></a></li>
-<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor1.png" alt=""></a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="light">
-<img class="img-responsive" src="images/light.png" alt="">
-</div>
-</div> -->
 </section> 
+
+<section id="sponsor">
+	<div id="sponsor-carousel" class="carousel slide" data-interval="false">
+		<div class="container">
+		<div class="row">
+		<div class="col-sm-10">
+		<h2>AUSPICIADDOR OFICIAL</h2>
+		<a class="sponsor-control-left" href="#sponsor-carousel" data-slide="prev"><i class="fa fa-angle-left"></i></a>
+		<a class="sponsor-control-right" href="#sponsor-carousel" data-slide="next"><i class="fa fa-angle-right"></i></a>
+		<div class="carousel-inner">
+		<div class="item active">
+			<ul>
+				<!-- MODELO DE SPONSOR -->
+				<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor1.png" alt=""></a></li>
+				<!-- Añadir 5 sponsor mas -->
+			</ul>
+		</div>
+		
+		</div>
+		</div>
+		</div>
+		</div>
+		</div>
+		<div class="light">
+		<img class="img-responsive" src="images/light.png" alt="">
+		</div>
+		</div>
+</section>
+	
+
 
 <section id="contact">
 
