--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-<title>Anadroid Camp 2016 - GDG Android Bolivia</title>
+<title>Android Camp 2016 - GDG Android Bolivia</title>
 
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/font-awesome.css" rel="stylesheet">
@@ -256,7 +256,7 @@
 		<div class="item active">
 			<ul>
 				<!-- MODELO DE SPONSOR -->
-				<li><a href="#"><img class="img-responsive" src="images/sponsor/sponsor1.png" alt=""></a></li>
+				<li><a href="http://www.upb.edu/"><img class="img-responsive" src="images/sponsor/sponsor1.png" alt=""></a></li>
 				<!-- Añadir 5 sponsor mas -->
 			</ul>
 		</div>
